force-app/main/default/objects/Credit_Rating__c/fields/FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score__c</fullName>
    <description>FICO Score</description>
    <inlineHelpText>FICO Score</inlineHelpText>
    <label>FICO Score</label>
    <length>80</length>
    <type>Text</type>
</CustomField>