force-app/main/default/objects/Credit_Rating__c/fields/What_it_means__c.field-meta.xml
<CustomField>
    <fullName>What_it_means__c</fullName>
    <description>what the rating means</description>
    <inlineHelpText>what the rating means</inlineHelpText>
    <label>What it means</label>
    <type>TextArea</type>
</CustomField>